--- a/Learn.Web/Views/Shared/_Layout.cshtml
+++ b/Learn.Web/Views/Shared/_Layout.cshtml
@@ -1,40 +1,74 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <title>@ViewBag.Title 我的首页</title>
+    <script src="@Url.Content("~/scripts/jquery-1.10.2.js")"></script>
+    <script src="@Url.Content("~/scripts/bootstrap-3.3.2-dist/js/bootstrap.js")"></script>
+    <link href="@Url.Content("~/scripts/bootstrap-3.3.2-dist/css/bootstrap.css")" rel="stylesheet" />
+    <style>
+        .containerDiv {
+            margin-left: 0;
+            padding: 60px 0 0 0;
+        }
+
+        .body {
+            color: #666;
+            font-family: "微软雅黑";
+        }
+
+        .registe {
+            margin-left: -30px !important;
+            margin-right: -31px;
+        }
+    </style>
+
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+    <div class="container-fluid">
+        <div class="pageNavigation">
+            <div class="row">
+                <nav class="navbar-header navbar-default navbar-fixed-top head">
+                    <a class="navbar-brand" href="@Url.Action("Index","Home")">首页</a>
+                    <a class="navbar-brand" href="#">新闻</a>
+                    <a class="navbar-brand" href="#">社会</a>
+                    <a class="navbar-brand" href="#">关于我们</a>
+                    @{
+                        if (Session["userInfo"] == null)
+                        {
+                            <a class="navbar-brand pull-right" href="@Url.Action("Index", "Login")">登陆</a>
+                        }
+                        else
+                        {
+                            //var userInfo = (UserInfo)Session["userInfo"];
+                            @*<a class="navbar-brand pull-right " href="@Url.Action("LogOut", "LogOut")"> |注销</a>
+                            <a class="navbar-brand pull-right registe" href="@Url.Action("Index", "UserInfomation")">@{ @userInfo.UserName }</a>*@
+                                }
+                    }
+                </nav>
             </div>
         </div>
+
+        <div class="container-fluid containerDiv">
+            @RenderBody()
+        </div>
+
+        <div class="bottom">
+            <div class="row">
+                <nav class="navbar navbar-default navbar-fixed-bottom bottonFont">
+                    <div>
+                        <span class="col-lg-offset-5">版权所有：朝阳区</span>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
+
     </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+
 </body>
+
 </html>
+
+@RenderSection("script", required: false)
