--- a/Learn.IData/IDBSession.tt
+++ b/Learn.IData/IDBSession.tt
@@ -24,6 +24,12 @@ using System.Threading.Tasks;
      public partial interface IDBSession
 	    {
 		<# foreach(DbTable table in DbHelper.GetDbTables(config.ConnectionStr,config.DbDatabase)) {#>
+			<#
+		 if(table.TableName =="__MigrationHistory"||table.TableName =="sysdiagrams"){
+		   continue;
+		 }
+		#>
+
 		I<#= table.TableName #>Repository <#= table.TableName #>Repository { get; }
 
 
