--- a/Learn.IData/IRepository.tt
+++ b/Learn.IData/IRepository.tt
@@ -29,6 +29,11 @@ using Learn.Core;
   
    
 		<# foreach(DbTable table in DbHelper.GetDbTables(config.ConnectionStr,config.DbDatabase)) {#>
+		<#
+		 if(table.TableName =="__MigrationHistory"||table.TableName =="sysdiagrams"){
+		   continue;
+		 }
+		#>
 		 <#manager.StartNewFile("I"+table.TableName+"Repository.cs");#>
 	    public partial interface I<#=table.TableName#>Repository:IBaseRepository<<#= table.TableName #>>
 	    {
