--- a/Learn.IService/IService.tt
+++ b/Learn.IService/IService.tt
@@ -29,6 +29,12 @@ namespace Learn.IService
   
    
 		<# foreach(DbTable table in DbHelper.GetDbTables(config.ConnectionStr,config.DbDatabase)) {#>
+		<#
+	 if(table.TableName =="__MigrationHistory"||table.TableName =="sysdiagrams"){
+		   continue;
+		 }
+		#>
+
 		 <#manager.StartNewFile("I"+table.TableName+"Repository.cs");#>
 	    public partial interface I<#=table.TableName#>Service:IBaseService<<#= table.TableName #>>
 	    {
