--- a/Learn.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Learn.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -2,6 +2,8 @@
 <head>
     <title>@ViewBag.Title 我的首页</title>
     <script src="@Url.Content("~/scripts/jquery-1.10.2.js")"></script>
+    <script src="~/scripts/jquery-easyui-1.5/jquery.easyui.min.js"></script>
+    <link href="~/scripts/jquery-easyui-1.5/themes/gray/easyui.css" rel="stylesheet" />
     <script src="@Url.Content("~/scripts/bootstrap-3.3.2-dist/js/bootstrap.js")"></script>
     <link href="@Url.Content("~/scripts/bootstrap-3.3.2-dist/css/bootstrap.css")" rel="stylesheet" />
     <style>
